fix(ml): string normalisation